force-app/main/default/objects/Joint_Coaching_Form__c/Joint_Coaching_Form__c.object-meta.xml
<CustomObject>
    <description>Used by Sales Team</description>
    <label>Joint Coaching Form</label>
    <nameField>
        <label>Joint Coaching Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Joint Coaching Form</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>