force-app/main/default/objects/Joint_Coaching_Form__c/fields/Call_Report_Quality_from_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Call_Report_Quality_from_Salesforce__c</fullName>
    <label>Call Report Quality (from Salesforce)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>