force-app/main/default/objects/Joint_Coaching_Form__c/fields/Client_Name_Senior_School_Official__c.field-meta.xml
<CustomField>
    <fullName>Client_Name_Senior_School_Official__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name/Senior School Official</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Joint Coaching Form</relationshipLabel>
    <relationshipName>Joint_Coaching_Form</relationshipName>
    <type>Lookup</type>
</CustomField>