force-app/main/default/objects/Joint_Coaching_Form__c/fields/Did_RAE_know_others_outside_FA_office__c.field-meta.xml
<CustomField>
    <fullName>Did_RAE_know_others_outside_FA_office__c</fullName>
    <description>Did the RAE know other campus administrators outside of the financial aid office?</description>
    <inlineHelpText>Did the RAE know other campus administrators outside of the financial aid office?</inlineHelpText>
    <label>Did RAE know others outside FA office?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>