force-app/main/default/objects/Joint_Coaching_Form__c/fields/Documented_in_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Documented_in_Salesforce__c</fullName>
    <inlineHelpText>Was the meeting appropriately documented in Salesforce?</inlineHelpText>
    <label>Documented in Salesforce</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>