force-app/main/default/objects/Joint_Coaching_Form__c/fields/Follow_Up_and_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_and_Next_Steps__c</fullName>
    <label>Follow-Up and Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>