force-app/main/default/objects/Joint_Coaching_Form__c/fields/Follow_up_documentation_sent_to_school__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_documentation_sent_to_school__c</fullName>
    <inlineHelpText>Was the appropriate follow-up documentation sent to the school?</inlineHelpText>
    <label>Follow-up documentation sent to school?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>