force-app/main/default/objects/Joint_Coaching_Form__c/fields/Go_Forward_Committments__c.field-meta.xml
<CustomField>
    <fullName>Go_Forward_Committments__c</fullName>
    <description>At the end of the meeting, did the RAE get customer  &quot;go-forward&quot; committments?</description>
    <inlineHelpText>At the end of the meeting, did the RAE get customer  &quot;go-forward&quot; committments?</inlineHelpText>
    <label>Go-Forward Committments?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>