force-app/main/default/objects/Joint_Coaching_Form__c/fields/Have_clear_objective_for_the_meeting__c.field-meta.xml
<CustomField>
    <fullName>Have_clear_objective_for_the_meeting__c</fullName>
    <label>Have clear objective for the meeting?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>