force-app/main/default/objects/Joint_Coaching_Form__c/fields/Identify_the_competitive_environement__c.field-meta.xml
<CustomField>
    <fullName>Identify_the_competitive_environement__c</fullName>
    <label>Identify the competitive environement?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>