force-app/main/default/objects/Joint_Coaching_Form__c/fields/If_other_please_specify__c.field-meta.xml
<CustomField>
    <fullName>If_other_please_specify__c</fullName>
    <label>If other, please specify</label>
    <type>TextArea</type>
</CustomField>