force-app/main/default/objects/Joint_Coaching_Form__c/fields/If_yes_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>If_yes_Next_Steps__c</fullName>
    <label>If yes, Next Steps:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Presentation</fullName>
            </value>
            <value>
                <fullName>Proposal Request</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>