force-app/main/default/objects/Joint_Coaching_Form__c/fields/Learn_first_Pitch_later__c.field-meta.xml
<CustomField>
    <fullName>Learn_first_Pitch_later__c</fullName>
    <description>Did the RAE &quot;learn first&quot; and then &quot;Pitch later&quot;?</description>
    <inlineHelpText>Did the RAE &quot;learn first&quot; and then &quot;Pitch later&quot;?</inlineHelpText>
    <label>Learn first - Pitch later</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>