force-app/main/default/objects/Joint_Coaching_Form__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <formula>Post_Visit_Follow_Up_Overall_Score__c  +  Pre_Call_Planning_Overall_Score__c  +  School_Call_Management_Overall_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will auto-calculate from the other scores.</inlineHelpText>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>