force-app/main/default/objects/Joint_Coaching_Form__c/fields/Performance_results_follow_up__c.field-meta.xml
<CustomField>
    <fullName>Performance_results_follow_up__c</fullName>
    <inlineHelpText>pre-callm, visit and post visit</inlineHelpText>
    <label>Performance results follow-up</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>