force-app/main/default/objects/Joint_Coaching_Form__c/fields/Pre_Call_Planning_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Pre_Call_Planning_Overall_Score__c</fullName>
    <description>Please enter a number from 1-5</description>
    <inlineHelpText>Please enter a number from 1-5</inlineHelpText>
    <label>Pre-Call Planning Overall Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>