force-app/main/default/objects/Joint_Coaching_Form__c/fields/Pre_Meeting_Agenda_Sent_and_entered_SF__c.field-meta.xml
<CustomField>
    <fullName>Pre_Meeting_Agenda_Sent_and_entered_SF__c</fullName>
    <description>Did the RAE send a pre-meeting agenda to the client and enter it into Salesforce?</description>
    <inlineHelpText>Did the RAE send a pre-meeting agenda to the client and enter it into Salesforce?</inlineHelpText>
    <label>Pre-Meeting Agenda Sent - Entered in SF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>