force-app/main/default/objects/Joint_Coaching_Form__c/fields/Regional_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Regional_Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Joint_Coaching_Form</relationshipName>
    <type>Lookup</type>
</CustomField>