force-app/main/default/objects/Joint_Coaching_Form__c/fields/Sales_Development_Areas__c.field-meta.xml
<CustomField>
    <fullName>Sales_Development_Areas__c</fullName>
    <label>Sales Development Areas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>