force-app/main/default/objects/Joint_Coaching_Form__c/fields/Sales_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Sales_Strengths__c</fullName>
    <label>Sales Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>