force-app/main/default/objects/Joint_Coaching_Form__c/fields/School_Call_Management_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>School_Call_Management_Overall_Score__c</fullName>
    <description>Please enter a number from 1-5</description>
    <inlineHelpText>Please enter a number from 1-5</inlineHelpText>
    <label>School Call Management Overall Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>