force-app/main/default/objects/Joint_Coaching_Form__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>School Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Joint Coaching Form</relationshipLabel>
    <relationshipName>Joint_Coaching_Form</relationshipName>
    <type>Lookup</type>
</CustomField>