force-app/main/default/objects/Joint_Coaching_Form__c/fields/Was_the_RAE_able_to_control_the_call__c.field-meta.xml
<CustomField>
    <fullName>Was_the_RAE_able_to_control_the_call__c</fullName>
    <label>Was the RAE able to control the call?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>