force-app/main/default/objects/Joint_Coaching_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>District_Manager__c</columns>
    <columns>Regional_Account_Executive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>