force-app/main/default/objects/Joint_Coaching_Form__c/listViews/Julie_s_View.listView-meta.xml
<ListView>
    <fullName>Julie_s_View</fullName>
    <columns>NAME</columns>
    <columns>District_Manager__c</columns>
    <columns>Regional_Account_Executive__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>District_Manager__c</field>
        <operation>equals</operation>
        <value>Julie Esau</value>
    </filters>
    <label>Julie&#39;s View</label>
    <sharedTo/>
</ListView>